Bookmark sidebar tooltips no longer appear on hover when sidebar is not focused
Categories
(Core :: XUL, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr115 | --- | unaffected |
| firefox118 | --- | unaffected |
| firefox119 | --- | verified |
| firefox120 | --- | verified |
People
(Reporter: ke5trel, Assigned: emilio)
References
(Regression)
Details
(Keywords: regression, ux-consistency)
Attachments
(2 files)
|
48 bytes,
text/x-phabricator-request
|
dmeehan
:
approval-mozilla-beta+
|
Details | Review |
|
48 bytes,
text/x-phabricator-request
|
Details | Review |
STR:
- Open the bookmarks sidebar (Ctrl+B) on Ubuntu 23.04.
- Click in the browser content to focus it.
- Hover the mouse cursor over a bookmark in the sidebar.
Expected:
Hover tooltip appears, revealing the full bookmark title.
Actual:
Even though the browser window is active, tooltips won't appear until after clicking inside the sidebar.
The sidebar is focused when it is first opened and when the user clicks in it (eg to open a folder), but otherwise it will not be focused and so tooltips won't work the majority of the time. Tooltips are essential to see full bookmark titles due to the narrow width of the sidebar.
Regression window:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=5ed2d82563db9ab07b081fa10544fb713c174dc2&tochange=8ae372dc88d1d1b1b5fd4783aec003da378c3e45
Regressed by Bug 148624.
Comment 1•2 years ago
|
||
:fanzhuyifan+github, since you are the author of the regressor, bug 148624, could you take a look?
For more information, please visit BugBot documentation.
Comment 2•2 years ago
|
||
The regressing commit (https://phabricator.services.mozilla.com/D187418) changes the previous behavior to only displaying tooltips when the document has focus, which causes the regression. I guess we need the method mentioned by mstange for a proper fix not causing regressions:
I think a better fix would be for widget to send a window-level mouse exit event when the workspace switch happens. But I'm not sure where that code would go or how we would detect this situation.
Comment 3•2 years ago
|
||
See also the discussion in https://phabricator.services.mozilla.com/D187749
For some reason when the changing the cpp code, a similar regression happened.
The final changed version changes the JS code, and does not have a regression.
Comment 4•2 years ago
|
||
:neil deakin could this be triaged for severity?
Comment 5•2 years ago
|
||
:emilio anything we can expect for Fx119, we are in the final week of beta
| Assignee | ||
Comment 8•2 years ago
|
||
This is hard to test because it requires a chrome-only subdoc like a
sidebar. Should be doable even though I'm a bit short on time.
Window activeness gets propagated from toplevel properly.
| Assignee | ||
Comment 9•2 years ago
|
||
Now that we have a DocumentState type we can be a bit less explicit
(before this used EventStates, so the extra Document in the names was
useful).
Comment 10•2 years ago
|
||
Comment 11•2 years ago
|
||
Comment 12•2 years ago
|
||
| bugherder | ||
Comment 13•2 years ago
|
||
:emilio could you add a beta uplift request on this when ready?
| Assignee | ||
Updated•2 years ago
|
| Assignee | ||
Comment 14•2 years ago
|
||
Comment on attachment 9357654 [details]
Bug 1857513 - Use window activeness rather than document.hasFocus() to display chrome-only tooltips. r=smaug,edgar
Beta/Release Uplift Approval Request
- User impact if declined: comment 0
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: No
- Needs manual test from QE?: Yes
- If yes, steps to reproduce: comment 0
- List of other uplifts needed: none
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Tweaks a condition to handle subdocuments like sidebars properly.
- String changes made/needed: none
- Is Android affected?: No
| Assignee | ||
Updated•2 years ago
|
Comment 15•2 years ago
|
||
| bugherder | ||
Comment 16•2 years ago
|
||
Comment on attachment 9357654 [details]
Bug 1857513 - Use window activeness rather than document.hasFocus() to display chrome-only tooltips. r=smaug,edgar
Approved for 119.0b9
Comment 17•2 years ago
|
||
| uplift | ||
Updated•2 years ago
|
Updated•2 years ago
|
Comment 18•2 years ago
•
|
||
I was able to reproduce the issue on Ubuntu 20.04 using FF build 119.0a1(20230909211202).
Verified as fixed on Ubuntu 20.04/ WIn10 / Mac 12.6 using FF build 120.0a1(20231012093726).
Pending verification on Beta 119.0b9.
Updated•2 years ago
|
Comment 19•2 years ago
|
||
Reproduced this issue on an affected Nightly build from 2023-10-06, on macOS 10.15
Verified as fixed on Firefox 119.0b9 (20231013091412) on macOS 10.15, Windows 10 and Ubuntu 22.04.
Description
•