Bug 1857513 - Use window activeness rather than document.hasFocus() to display chrome-only tooltips. r=smaug

This is hard to test because it requires a chrome-only subdoc like a
sidebar. Should be doable even though I'm a bit short on time.

Window activeness gets propagated from toplevel properly.

Differential Revision: https://phabricator.services.mozilla.com/D190595